# radar-patient-check

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  tox.ini
.github/workflows/: pytest.yml
radar_patient_check/: config.py  database.py  demo.py  main.py
tests/: conftest.py  test_demo.py
